* Channel.d: Fixed issue with shared socket Fixed listener improperly reading incoming messages Added Channel class
* main.d:
* Client.d:
* StompBroker.dproj:

--- a/StompBroker/StompBroker.dproj
+++ b/StompBroker/StompBroker.dproj
@@ -45,5 +45,6 @@
   <ItemGroup>
     <Compile Include="main.d" />
     <Compile Include="Client.d" />
+    <Compile Include="Channel.d" />
   </ItemGroup>
 </Project>
