Added parser Finished more on the Channel class Added synchronization to the client threads

--- a/StompBroker/StompBroker.dproj
+++ b/StompBroker/StompBroker.dproj
@@ -46,5 +46,6 @@
     <Compile Include="main.d" />
     <Compile Include="Client.d" />
     <Compile Include="Channel.d" />
+    <Compile Include="Parser.d" />
   </ItemGroup>
 </Project>
