--- a/StompBroker/StompBroker.dproj
+++ b/StompBroker/StompBroker.dproj
@@ -48,4 +48,7 @@
     <Compile Include="Channel.d" />
     <Compile Include="Parser.d" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClientTest.py" />
+  </ItemGroup>
 </Project>
